Add printable code sheets: rename *.conversion.html to *_printable_code_sheet.html across 01-09

--- a/07-Software Development Pipeline/Testers/testers_printable_code_sheet.html
+++ b/07-Software Development Pipeline/Testers/testers_printable_code_sheet.html
@@ -29,7 +29,7 @@
             <li>Select "Save image as..." or "Copy image"</li>
             <li>Choose PNG format</li>
             <li>Save as: <code>testers.png</code></li>
-            <li>Place in directory: <code>..\07-Software Development Pipeline\Testers</code></li>
+            <li>Place in directory: <code>07-Software Development Pipeline\Testers</code></li>
         </ol>
         <p><strong>Or use online converter:</strong> <a href="https://convertio.co/svg-png/" target="_blank">convertio.co/svg-png</a></p>
     </div>
