--- a/05-Health & Safety/health_safety_ehs_printable_code_sheet.html
+++ b/05-Health & Safety/health_safety_ehs_printable_code_sheet.html
@@ -29,7 +29,7 @@
             <li>Select "Save image as..." or "Copy image"</li>
             <li>Choose PNG format</li>
             <li>Save as: <code>health_safety_ehs.png</code></li>
-            <li>Place in directory: <code>..\05-Health & Safety</code></li>
+            <li>Place in directory: <code>05-Health & Safety</code></li>
         </ol>
         <p><strong>Or use online converter:</strong> <a href="https://convertio.co/svg-png/" target="_blank">convertio.co/svg-png</a></p>
     </div>
