--- a/08-Advance/Product & Service/product_service_printable_code_sheet.html
+++ b/08-Advance/Product & Service/product_service_printable_code_sheet.html
@@ -29,7 +29,7 @@
             <li>Select "Save image as..." or "Copy image"</li>
             <li>Choose PNG format</li>
             <li>Save as: <code>product_service.png</code></li>
-            <li>Place in directory: <code>..\08-Advance\Product & Service</code></li>
+            <li>Place in directory: <code>08-Advance\Product & Service</code></li>
         </ol>
         <p><strong>Or use online converter:</strong> <a href="https://convertio.co/svg-png/" target="_blank">convertio.co/svg-png</a></p>
     </div>
