--- a/08-Advance/people and culture/people_and_culture_printable_code_sheet.html
+++ b/08-Advance/people and culture/people_and_culture_printable_code_sheet.html
@@ -29,7 +29,7 @@
             <li>Select "Save image as..." or "Copy image"</li>
             <li>Choose PNG format</li>
             <li>Save as: <code>people_and_culture.png</code></li>
-            <li>Place in directory: <code>..\08-Advance\people and culture</code></li>
+            <li>Place in directory: <code>08-Advance\people and culture</code></li>
         </ol>
         <p><strong>Or use online converter:</strong> <a href="https://convertio.co/svg-png/" target="_blank">convertio.co/svg-png</a></p>
     </div>
